@@ -34,186 +34,144 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 public class ExecutionIT extends BaseJobExecIT {
 
     @Test
-    public void testExecution_SingleJob_DefaultParams() {
-        Job1 job1 = new Job1();
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config.yml", "--exec", "--job=job1"};
-
-        List<ExecutableAtMostOnceJob> jobs = Collections.singletonList(job1);
-        executeJobs(jobs, args);
+    public void testSingleJob_DefaultParams() {
+        List<ExecutableAtMostOnceJob> jobs = List.of(new Job1());
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config.yml", "--exec", "--job=job1");
         assertExecuted(jobs);
     }
 
     @Test
-    public void testExecution_Group1_SingleJob_DefaultParams() {
+    public void testGroup1_SingleJob_DefaultParams() {
         Job1 job1 = new Job1();
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group1"};
 
-        List<ExecutableAtMostOnceJob> jobs = Collections.singletonList(job1);
-        executeJobs(jobs, args);
+        List<ExecutableAtMostOnceJob> jobs = List.of(job1);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group1");
         assertExecuted(jobs);
     }
 
     @Test
-    public void testExecution_Group6_SingleJob_OverridenParams() {
+    public void testGroup6_SingleJob_OverriddenParams() {
         Job1 job1 = new Job1();
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group6"};
 
-        List<ExecutableAtMostOnceJob> jobs = Collections.singletonList(job1);
-        executeJobs(jobs, args);
-        assertExecutedWithParams(job1, new HashMap<String, Object>() {{
-            put("a", "overriden");
-            put("b", "default");
-        }});
+        List<ExecutableAtMostOnceJob> jobs = List.of(job1);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group6");
+        assertExecutedWithParams(job1, Map.of("a", "overridden", "b", "default"));
     }
 
     @Test
-    public void testExecution_Group2_MultipleJobs_Parallel_DefaultParams() {
+    public void testGroup2_MultipleJobs_Parallel_DefaultParams() {
         Job1 job1 = new Job1();
         Job2 job2 = new Job2();
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group2"};
 
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job1, job2);
-        executeJobs(jobs, args);
+        List<ExecutableAtMostOnceJob> jobs = List.of(job1, job2);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group2");
         assertExecuted(jobs);
     }
 
     @Test
-    public void testExecution_Group3_MultipleJobs_Parallel_OverridenParams() {
+    public void testGroup3_MultipleJobs_Parallel_OverriddenParams() {
         Job1 job1 = new Job1();
         Job2 job2 = new Job2();
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group3"};
 
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job1, job2);
-        executeJobs(jobs, args);
-        assertExecutedWithParams(job1, new HashMap<String, Object>() {{
-            put("a", "overriden");
-            put("b", "default");
-        }});
-        assertExecutedWithParams(job2, new HashMap<String, Object>() {{
-            put("e", "default");
-            put("y", "added");
-        }});
+        List<ExecutableAtMostOnceJob> jobs = List.of(job1, job2);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group3");
+        assertExecutedWithParams(job1, Map.of("a", "overridden", "b", "default"));
+        assertExecutedWithParams(job2, Map.of("e", "default", "y", "added"));
     }
 
     @Test
-    public void testExecution_Group4_MultipleJobs_Dependent_OverridenParams() {
+    public void testGroup4_MultipleJobs_Dependent_OverriddenParams() {
         Job1 job1 = new Job1();
         Job2 job2 = new Job2(1000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group4"};
 
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job2, job1);
-        executeJobs(jobs, args);
+        List<ExecutableAtMostOnceJob> jobs = List.of(job2, job1);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group4");
         assertExecutedInOrder(jobs);
-        assertExecutedWithParams(job2, Collections.singletonMap("e", "overriden"));
+        assertExecutedWithParams(job2, Map.of("e", "overridden"));
     }
 
     @Test
-    public void testExecution_Group5_MultipleJobs_Dependent_OverridenParams() {
+    public void testGroup5_MultipleJobs_Dependent_OverriddenParams() {
         Job1 job1 = new Job1();
         Job2 job2 = new Job2(1000);
         Job3 job3 = new Job3(100000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group5"};
 
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job3, job2, job1);
-        executeJobs(jobs, args);
+        List<ExecutableAtMostOnceJob> jobs = List.of(job3, job2, job1);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config.yml", "--exec", "--job=group5");
         assertExecutedInOrder(jobs);
-        assertExecutedWithParams(job1, new HashMap<>() {{
-            put("a", "default");
-            put("b", "overriden");
-        }});
-        assertExecutedWithParams(job2, new HashMap<>() {{
-            put("e", "default");
-            put("z", "added");
-        }});
-        assertExecutedWithParams(job3, new HashMap<>() {{
-            put("i", "default");
-            put("k", "overriden");
-            put("y", "added");
-        }});
+        assertExecutedWithParams(job1, Map.of("a", "default", "b", "overridden"));
+        assertExecutedWithParams(job2, Map.of("e", "default", "z", "added"));
+        assertExecutedWithParams(job3, Map.of("i", "default", "k", "overridden", "y", "added"));
     }
 
     @Test
-    public void testExecution_JobWithDependencies_1() {
+    public void testJobWithDependencies_1() {
         Job1 job1 = new Job1();
         Job2 job2 = new Job2(1000);
         Job3 job3 = new Job3(100000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=job1"};
 
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job3, job2, job1);
-        executeJobs(jobs, args);
+        List<ExecutableAtMostOnceJob> jobs = List.of(job3, job2, job1);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=job1");
         assertExecutedInOrder(jobs);
     }
 
     @Test
-    public void testExecution_JobWithDependencies_2() {
+    public void testJobWithDependencies_2() {
         Job2 job2 = new Job2();
         Job3 job3 = new Job3(1000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=job2"};
 
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job3, job2);
-        executeJobs(jobs, args);
+        List<ExecutableAtMostOnceJob> jobs = List.of(job3, job2);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=job2");
         assertExecutedInOrder(jobs);
     }
 
     @Test
-    public void testExecution_Group1_DefaultDependencies() {
+    public void testGroup1_DefaultDependencies() {
         Job1 job1 = new Job1();
         Job2 job2 = new Job2(1000);
         Job3 job3 = new Job3(100000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=group1"};
 
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job3, job2, job1);
-        executeJobs(jobs, args);
+        List<ExecutableAtMostOnceJob> jobs = List.of(job3, job2, job1);
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=group1");
         assertExecutedInOrder(jobs);
     }
 
     @Test
-    public void testExecution_Group2_DefaultDependencies() {
-        Job1 job1 = new Job1();
-        Job2 job2 = new Job2(1000);
-        Job3 job3 = new Job3(100000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=group2"};
-
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job3, job2, job1);
-        executeJobs(jobs, args);
+    public void testGroup2_DefaultDependencies() {
+        List<ExecutableAtMostOnceJob> jobs = List.of(new Job3(100000), new Job2(1000), new Job1());
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=group2");
         assertExecutedInOrder(jobs);
     }
 
     @Test
-    public void testExecution_Group3_OverridenDependencies() {
-        Job1 job1 = new Job1();
-        Job3 job3 = new Job3(1000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=group3"};
-
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job3, job1);
-        executeJobs(jobs, args);
+    public void testGroup3_OverriddenDependencies() {
+        List<ExecutableAtMostOnceJob> jobs = List.of(new Job3(1000), new Job1());
+        executeJobs(jobs,
+                "--config=classpath:io/bootique/job/config_overriding_dependencies.yml",
+                "--exec",
+                "--job=group3");
         assertExecutedInOrder(jobs);
     }
 
     @Test
-    public void testExecution_Group4_OverridenDependencies() {
-        Job1 job1 = new Job1();
-        Job2 job2 = new Job2();
-        Job3 job3 = new Job3(1000);
-        String[] args = new String[]{"--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=group4"};
-
-        List<ExecutableAtMostOnceJob> jobs = Arrays.asList(job2, job1, job3);
-        executeJobs(jobs, args);
+    public void testGroup4_OverriddenDependencies() {
+        List<ExecutableAtMostOnceJob> jobs = List.of(new Job2(), new Job1(), new Job3(1000));
+        executeJobs(jobs, "--config=classpath:io/bootique/job/config_overriding_dependencies.yml", "--exec", "--job=group4");
         assertExecutedInOrder(jobs);
     }
 
     @Test
-    public void testExecution_DefaultParameterValue() {
+    public void testDefaultParameterValue() {
         ParameterizedJob1 job1 = new ParameterizedJob1();
         executeJobs(Collections.singleton(job1),
                 "--config=classpath:io/bootique/job/config_parameters_conversion.yml",
                 "--exec",
                 "--job=parameterizedjob1");
-        assertExecutedWithParams(job1, Collections.singletonMap("longp", 777L));
+        assertExecutedWithParams(job1, Map.of("longp", 777L));
     }
 
     @Test
-    public void testExecution_ParametersOverriddenWithProps() {
+    public void testParametersOverriddenWithProps() {
         ParameterizedJob2 job = new ParameterizedJob2();
 
         testFactory.app("--exec", "--job=parameterizedjob2")
@@ -222,11 +180,11 @@ public class ExecutionIT extends BaseJobExecIT {
                 .module(b -> BQCoreModule.extend(b).setProperty("bq.jobs.parameterizedjob2.params.longp", "35"))
                 .run();
 
-        assertExecutedWithParams(job, Collections.singletonMap("longp", 35l));
+        assertExecutedWithParams(job, Map.of("longp", 35L));
     }
 
     @Test
-    public void testExecution_ParametersOverriddenWithVars() {
+    public void testParametersOverriddenWithVars() {
         ParameterizedJob2 job = new ParameterizedJob2();
 
         testFactory.app("--exec", "--job=parameterizedjob2")
@@ -236,11 +194,11 @@ public class ExecutionIT extends BaseJobExecIT {
                 .module(b -> BQCoreModule.extend(b).setVar("TEST_PARAM", "35"))
                 .run();
 
-        assertExecutedWithParams(job, Collections.singletonMap("longp", 35l));
+        assertExecutedWithParams(job, Map.of("longp", 35L));
     }
 
     @Test
-    public void testExecution_Param_Default() {
+    public void testParam_Default() {
         ParameterizedJob4 job = new ParameterizedJob4();
 
         testFactory.app("--exec", "--job=parameterizedjob4")
@@ -252,7 +210,7 @@ public class ExecutionIT extends BaseJobExecIT {
     }
 
     @Test
-    public void testExecution_Param_Default_Null() {
+    public void testParam_Default_Null() {
         ParameterizedJob5 job = new ParameterizedJob5();
 
         testFactory.app("--exec", "--job=parameterizedjob5")
@@ -264,16 +222,16 @@ public class ExecutionIT extends BaseJobExecIT {
     }
 
     @Test
-    public void testExecution_UnregisteredJob() {
+    public void testUnregisteredJob() {
         BQRuntime app = testFactory.app("--exec", "--job=dummy", "--config=classpath:io/bootique/job/config_dummy.yml")
                 .autoLoadModules()
                 .createRuntime();
 
-        assertThrows(BootiqueException.class, () -> app.run());
+        assertThrows(BootiqueException.class, app::run);
     }
 
     @Test
-    public void testExecution_Group1_ParametersConversion() {
+    public void testGroup1_ParametersConversion() {
         ParameterizedJob1 job1 = new ParameterizedJob1();
 
         executeJobs(Collections.singleton(job1),
@@ -281,11 +239,11 @@ public class ExecutionIT extends BaseJobExecIT {
                 "--exec",
                 "--job=group1");
 
-        assertExecutedWithParams(job1, Collections.singletonMap("longp", 1L));
+        assertExecutedWithParams(job1, Map.of("longp", 1L));
     }
 
     @Test
-    public void testExecution_Group2_ParametersConversion() {
+    public void testGroup2_ParametersConversion() {
         ParameterizedJob1 job1 = new ParameterizedJob1();
         ParameterizedJob2 job2 = new ParameterizedJob2();
 
@@ -295,7 +253,7 @@ public class ExecutionIT extends BaseJobExecIT {
                 "--exec",
                 "--job=group2");
         assertExecutedInOrder(jobs);
-        assertExecutedWithParams(job1, Collections.singletonMap("longp", 777L));
-        assertExecutedWithParams(job2, Collections.singletonMap("longp", 33L));
+        assertExecutedWithParams(job1, Map.of("longp", 777L));
+        assertExecutedWithParams(job2, Map.of("longp", 33L));
     }
 }
